[tool.poetry]
name = "vast_ai_api"
version = "0.3.3"
description = "A Vast.ai API helper"
authors = ["Kian <kianshah376@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KianShah/vast-ai-api"

exclude = [
    "src/vast_ai_api/main.py"
]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.4"
requests = "^2.31.0"
paramiko = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
